# mudd.one

./: .gitignore  AGENTS.md  Cargo.toml  Makefile
.githooks/: pre-commit  pre-push
app/: project.yml
app/mudd/: AppDelegate.swift  main.swift
app/mudd/Views/: CanvasViewController.swift  InspectorViewController.swift  MainSplitViewController.swift  MainWindowController.swift  SidebarViewController.swift
core/: Cargo.toml
core/src/: lib.rs
core/src/dicom/: metadata.rs  reader.rs
core/src/export/: coco.rs  mod.rs  yolo.rs
core/src/imaging/: crop.rs  filters.rs  mod.rs  normalize.rs  roi.rs  types.rs
core/src/inference/: backend.rs  engine.rs  hf_cache.rs  mod.rs  ort.rs  segmentation.rs
core/src/pipeline/: contracts.rs
core/src/video/: extractor.rs
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
scripts/: build-dmg.sh  build-rust.sh
uniffi-bindgen/: Cargo.toml
