[workspace]
resolver = "2"
members = ["core", "ffi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["VetCoders <hello@vetcoders.io>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
ndarray = "0.17"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
