[package]
name = "mudd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for mudd.one — veterinary ultrasound processing & ML dataset preparation"

[lib]
path = "src/lib.rs"

[features]
default = ["backend-ort"]
backend-ort = ["dep:ort"]

[dependencies]
# DICOM (same major version to avoid duplicate crate conflicts)
dicom = "0.9"
dicom-pixeldata = { version = "0.9", features = ["ndarray"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "bmp"] }
imageproc = "0.25"

# Video
ffmpeg-next = "8.0"

# ONNX inference
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "download-binaries", "tls-native", "coreml"], optional = true }

# Workspace deps
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Utilities
directories = "6"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(embed_model)'] }
